# Differometor

./: .gitignore  batch-script.sh  benchmark_pso_scaling.py  dummy_pso.py  notes.md  profile_output.prof  pyproject.toml  tmp.py  tmp_optimization.py  voyager_optimization_losses_1.json  voyager_profile.prof
benchmarks/: benchmark_voyager_2025-12-02_00-42-27.csv  benchmark_voyager_2025-12-04_00-04-17.csv  benchmark_voyager_2025-12-09_18-58-13.csv  benchmark_voyager_2025-12-09_19-09-31.csv  benchmark_voyager_2025-12-09_19-11-17.csv
diffusion/: Diffusion (1).ipynb  preamble.py
examples/: interactive_hpo_examples.py  voyager_evosax_pso.py  voyager_evox_pso.py  voyager_genetic.py  voyager_optimization.py  voyager_pso.py
examples/voyager_pygad/: voyager_optimization_mean_fitness_1.json  voyager_optimization_parameters_1.json
optimization/: __init__.py  _init_env.py  config.py  optimization_protocols.py  protocols.py  utils.py
optimization/algorithms/: __init__.py  adam.py  adam_gd.py  bayesian_optimization.py  botorch_bo.py  evox_pso.py
optimization/benchmark/: __init__.py  benchmark.py
optimization/examples/: __init__,.py  __init__.py  voyager_adam.py  voyager_benchmark.py  voyager_bo.py  voyager_botorch_bo.py  voyager_evox_pso.py  voyager_random_baseline.py  voyager_sa_gd.py
optimization/hpo/: QUICK_REFERENCE.md  README.md  __init__.py  hpo.py
optimization/problems/: __init__.py  voyager_problem.py
optimization/voyager/: __init__.py  voyager_adam.py  voyager_evox_pso.py  voyager_problem.py
run_data/voyager_2025-11-30_23-49-57/: PSO-500.npz  metadata.json
(+16 files in other folders)
