[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "differometor"
version = "0.0.2"
authors = [{ name="Artificial Scientist Lab", email="jonathan.klimesch@mpl.mpg.de" }]
description = "A Differentiable Interferometer Simulator for the Compuational Design of Gravitational Wave Detectors"
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "jax==0.8.0",
    "optax==0.2.4",
    "numpy",
    "matplotlib",
    "tqdm",
    "evox>=1.2.2",
    "torch2jax>=0.1.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "torchaudio>=2.9.0",
    "evosax>=0.2.0",
    "ruff>=0.14.3",
    "jaxtyping>=0.3.3",
    "beartype>=0.22.6",
    "bayesian-optimization>=3.1.0",
]

[project.optional-dependencies]
cuda13 = ["jax[cuda13]==0.8.0"]
cuda12 = ["jax[cuda12]==0.8.0"]
dev = ["snakeviz"]

[project.urls]
Homepage = "https://github.com/artificial-scientist-lab/Differometor"
Issues = "https://github.com/artificial-scientist-lab/Differometor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["differometor*"]
exclude = ["examples", "images"]

[tool.ruff.lint]
ignore = ["F722", "F821"]
